# cursive-multiplex

./: .editorconfig  .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  cargo-test.json  demo.yml  nightly-build.json  shellshot.json  stable-build.json
.github/: FUNDING.yml
.github/workflows/: test_and_push.yml
assets/: README.md  config.yml  demo.yml
examples/: basic.rs  end2end_complex.rs  end2end_complex_focus.rs  end2end_complex_remove.rs  end2end_complex_resize.rs  end2end_complex_switch_views.rs  end2end_down_focus.rs  end2end_horizontal.rs  end2end_horizontal_fixed_size.rs  end2end_horizontal_remove.rs  end2end_horizontal_resize.rs  end2end_horizontal_switch_views.rs  end2end_left_focus.rs  end2end_left_right_focus_history.rs  end2end_right_focus.rs  end2end_smoke.rs  end2end_up_down_focus_history.rs  end2end_up_focus.rs  end2end_vertical.rs  end2end_vertical_fixed_size.rs  end2end_vertical_remove.rs  end2end_vertical_resize.rs  end2end_vertical_switch_views.rs  end2end_zoom.rs  history.rs  skewed.rs  tily.rs
examples/tests/: end2end.test.js  package-lock.json
scripts/: ci-build.sh  deploy-badges.sh  prepare-end2end-tests.sh  shields-from-tests.jq  update-end2end-snapshots.sh
scripts/tests/: example_basic_snapshot.sh
src/: actions.rs  error.rs  id.rs  lib.rs  node.rs  path.rs
tests/: end2end.rs  end2end.test.js  example_basic.test.js  geometric.rs  ls.test.js  package-lock.json  package.json
tests/__snapshots__/: end2end.test.js.snap  example_basic.test.js.snap  ls.test.js.snap
tests/snapshots/: end2end__down twice.snap  end2end__end2end_complex.snap  end2end__end2end_complex_focus.snap  end2end__end2end_complex_remove.snap  end2end__end2end_complex_resize.snap  end2end__end2end_complex_switch.snap  end2end__end2end_custom_split_ratio_horizontal.snap  end2end__end2end_custom_split_ratio_overshoot.snap  end2end__end2end_custom_split_ratio_overshoot_correction.snap  end2end__end2end_custom_split_ratio_undershoot.snap  end2end__end2end_custom_split_ratio_vertical.snap  end2end__end2end_down_resize.snap  end2end__end2end_horizontal.snap  end2end__end2end_horizontal_fixed_size.snap  end2end__end2end_horizontal_remove.snap  end2end__end2end_left_right_focus_history.snap  end2end__end2end_smoke.snap  end2end__end2end_up_down_focus_history.snap  end2end__end2end_vertical.snap  end2end__end2end_vertical_fixed_size.snap  end2end__end2end_vertical_remove.snap  end2end__end2end_zoom.snap  (+6 more)
