[package]
authors = ["Fin Christensen <christensen.fin@gmail.com>", "Johannes Wünsche <johannes.wuensche97@gmail.com>"]
description = "A tmux like multiplexer for gyscos/cursive views"
documentation = "https://docs.rs/cursive-multiplex"
edition = "2018"
keywords = ["cursive", "tui", "terminal", "tiling", "view"]
license = "BSD-3-Clause"
name = "cursive-multiplex"
readme = "README.md"
repository = "https://github.com/deinstapel/cursive-multiplex"
version = "0.4.1-alpha.0"
[badges]
[badges.is-it-maintained-open-issues]
repository = "deinstapel/cursive-multiplex"

[badges.travis-ci]
repository = "deinstapel/cursive-multiplex"

[dependencies]
cursive_core = "^0.2"
thiserror = "1.0"
indextree = "4.3"
log = "0.4"

[dev-dependencies]
crossbeam = "^0.8"
cursive = "^0.16"
serde_json = "1.0"
insta = "1.5"
