[package]
authors = ["Fin Christensen <christensen.fin@gmail.com>", "Johannes Wünsche <johannes.wuensche97@gmail.com>"]
description = "A tmux like multiplexer for gyscos/cursive views"
documentation = "https://docs.rs/cursive-multiplex"
edition = "2018"
keywords = ["cursive", "tui", "terminal", "tiling", "view"]
license = "BSD-3-Clause"
name = "cursive-multiplex"
readme = "README.md"
repository = "https://github.com/deinstapel/cursive-multiplex"
version = "0.5.2-alpha.0"

[dependencies]
cursive_core = "0.3"
thiserror = "1"
indextree = "4.3"
log = "0.4"

[dev-dependencies]
crossbeam = "0.8"
cursive = "0.17"
serde_json = "1"
insta = "1.10.0"
